chore: cleanup unused code